kubernetes/apps/jobs/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jobs
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
